--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,17 @@ find_package(Boost COMPONENTS program_options)
 include_directories(${Boost_INCLUDE_DIRS})
 include_directories(.)
 
-SET(CMAKE_CXX_FLAGS -D_FILE_OFFSET_BITS=64)
+set(CMAKE_CXX_FLAGS -D_FILE_OFFSET_BITS=64)
 
-ADD_LIBRARY(lsfs SHARED lsfs.cc)
-ADD_EXECUTABLE(mkfs.lsfs mkfs.cc)
+add_library(lsfs SHARED lsfs.cc)
+add_executable(mkfs.lsfs mkfs.cc)
 target_link_libraries(mkfs.lsfs ${Boost_LIBRARIES}  lsfs)
 
-ADD_EXECUTABLE(lsfs.fuse lsfs-fuse.cc)
+add_executable(lsfs.fuse lsfs-fuse.cc)
 target_link_libraries(lsfs.fuse lsfs -lfuse)
 
+
+install(TARGETS lsfs mkfs.lsfs lsfs.fuse
+  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION lib
+  )
